--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.7.0",
+    "jose": "^6.0.10",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
